scss/main.css
html {
  height: 100%;
  background-color: #3249c3;
}

html.red {
  background-color: #c33232;
}

body {
  font-family: 'Nunito', sans-serif;
  margin: 0;
  background-color: white;
}

a {
  color: #3f58e5;
  text-decoration: none;
  text-align: center;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
}

input {
  width: 50%;
  margin: 5px;
  padding: 8px;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
}

textarea {
  width: 50%;
  height: 500px;
  padding: 8px;
  font-family: 'Nunito', sans-serif;
}

button {
  width: 50%;
  margin: 5px;
  padding: 8px;
  color: #3f58e5;
  font-size: 25px;
  border-color: #3f58e5;
  background-color: rgba(63, 88, 229, 0.1);
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
}

button:hover, button:focus {
  background-color: rgba(63, 88, 229, 0.6);
  color: #142691;
  font-weight: bolder;
}

form {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 100%;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

table {
  width: 100%;
  border: 5px solid #3f58e5;
  border-radius: 17px;
}

video {
  border-radius: 35px;
  background-color: #ecf8fe;
  padding: 10px;
}

li, td, th, p {
  font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
  color: #525252;
}

li.leftCenter, td.leftCenter, th.leftCenter, p.leftCenter {
  margin-left: 15%;
}

li.rightCenter, td.rightCenter, th.rightCenter, p.rightCenter {
  margin-right: 15%;
}

h1 {
  font-size: calc(35px + (35 - 14) * ((100vw - 300px) / (1600 - 300)));
  line-height: calc(1.5em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
  margin: 0;
}

h2 {
  font-size: calc(24px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
  margin: 0;
}

h3 {
  font-size: calc(16px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
  line-height: calc(1.4em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
  margin: 0;
}

h5 {
  margin: 0;
}

.btn-blue {
  border-color: #3f58e5;
  background-color: rgba(63, 88, 229, 0.1);
  color: #3f58e5;
}

.btn-blue:hover, .btn-blue:focus {
  background-color: rgba(63, 88, 229, 0.6);
  color: #142691;
  font-weight: bolder;
}

.btn-yellow {
  border-color: #d7ca40;
  background-color: rgba(215, 202, 64, 0.1);
  color: #d7ca40;
}

.btn-yellow:hover, .btn-yellow:focus {
  background-color: rgba(215, 202, 64, 0.6);
  color: #7d751a;
  font-weight: bolder;
}

.btn-green {
  border-color: #7fdc54;
  background-color: rgba(127, 220, 84, 0.1);
  color: #7fdc54;
}

.btn-green:hover, .btn-green:focus {
  background-color: rgba(127, 220, 84, 0.6);
  color: #43931e;
  font-weight: bolder;
}

.btn-teal {
  border-color: #0798ba;
  background-color: rgba(7, 152, 186, 0.1);
  color: #0798ba;
}

.btn-teal:hover, .btn-teal:focus {
  background-color: rgba(7, 152, 186, 0.6);
  color: #02343f;
  font-weight: bolder;
}

.btn-red {
  border-color: #e53f3f;
  background-color: rgba(229, 63, 63, 0.1);
  color: #e53f3f;
}

.btn-red:hover, .btn-red:focus {
  background-color: rgba(229, 63, 63, 0.6);
  color: #911414;
  font-weight: bolder;
}

.btn-lifear {
  border-color: #46b1df;
  background-color: rgba(70, 177, 223, 0.1);
  color: #46b1df;
}

.btn-lifear:hover, .btn-lifear:focus {
  background-color: rgba(70, 177, 223, 0.6);
  color: #186a8d;
  font-weight: bolder;
}

.btn-lifear-dark {
  border-color: #2080a8;
  background-color: rgba(32, 128, 168, 0.1);
  color: #2080a8;
}

.btn-lifear-dark:hover, .btn-lifear-dark:focus {
  background-color: rgba(32, 128, 168, 0.6);
  color: #0c2e3d;
  font-weight: bolder;
}

.appButton.red-border {
  border: 7px solid #e53f3f;
}

.appButton.red-border > * {
  color: #e53f3f;
}

.appButton.blue-border {
  border: 7px solid #3f58e5;
}

.appButton.blue-border > * {
  color: #3f58e5;
}

.appButton.green-border {
  border: 7px solid #7fdc54;
}

.appButton.green-border > * {
  color: #7fdc54;
}

.appButton.yellow-border {
  border: 7px solid #d7ca40;
}

.appButton.yellow-border > * {
  color: #d7ca40;
}

.appButton.teal-border {
  border: 7px solid #0798ba;
}

.appButton.teal-border > * {
  color: #0798ba;
}

.text-blue {
  color: #3f58e5;
}

.text-red {
  color: #e53f3f;
}

.text-yellow {
  color: #d7ca40;
}

.text-lifear {
  color: #46b1df;
}

.text-lifear-dark {
  color: #2080a8;
}

.leftAlign {
  margin-left: -6%;
}

.rightAlign {
  margin-right: -6%;
}

.Section {
  text-align: center;
  margin-top: 15px;
  margin-bottom: 15px;
}

.Section.withBackground {
  border-radius: 25px;
  background: #ecf8fe;
}

.Section.withHorizontalDivider {
  border-bottom: 1px solid #ccc;
  padding-bottom: 12px;
}

.ColumnImage {
  height: 25vmin;
  width: auto;
  min-height: 50px;
  margin-right: 25px;
  background-image: url(../Resources/pages/index/circle-img-holder.svg);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 2vmin;
  background-position-x: right;
}

.ColumnSVG {
  height: 30vmin;
  width: auto;
  min-height: 50px;
  margin-left: 25px;
}

.TwoColumnSection {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

@media screen and (max-width: 700px) {
  .TwoColumnSection {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
  }
}
/* ... */

